--- a/midterm_routing/src/ContactList.css
+++ b/midterm_routing/src/ContactList.css
@@ -7,9 +7,11 @@
 }
 .AllContacts {
   flex: 90%;
-
-  overflow: scroll;
 }
-.ContactList.LetterSort {
-  position: sticky;
+.LetterSort {
+  text-align: right;
+  font-size: 16px;
+  position: fixed;
+  top: 120px;
+  right: 15px;
 }
