--- a/Final/final_draftjs/src/MyEditor.css
+++ b/Final/final_draftjs/src/MyEditor.css
@@ -1,12 +1,19 @@
-.editor-container {
-  border: none;
-  background-color: #9e9e9e61;
-  padding: 20px;
-  width: 100%;
-  height: 100%;
+.MyEditor {
+  display: grid;
+  grid-template-columns: 950px auto;
+  grid-template-rows: 80px auto;
+  height: 100vh;
 }
 
-.MyEditor {
-  width: 100%;
-  height: 100%;
+.editorTopbar {
+  grid-row: 1/2;
+  grid-column: 1/3;
+  background-color: #f1f1f1;
+}
+
+.editorSidebar {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  background-color: #f1f1f1;
+  padding-top: 150px;
 }
