--- a/Final/final_draftjs/src/Bookpage.css
+++ b/Final/final_draftjs/src/Bookpage.css
@@ -1,29 +1,51 @@
 .Bookpage {
   display: grid;
-  grid-template-columns: 950px auto;
-  grid-template-rows: 80px auto;
-  height: 100vh;
+  grid-template-columns: 934px auto;
+  grid-template-rows: 90px 1276px;
+  /*background-color: rgb(255, 252, 224);*/
+  background-color: white;
+  background-image: url("bg.png");
+  /*filter: opacity(0.4);*/
 }
 
-.labels {
-  margin: 8px;
-}
 .sidebar {
-  grid-row: 2/3;
   grid-column: 2/3;
-  background-color: #f1f1f1;
-  padding-top: 150px;
+  grid-row: 2/3;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 200px;
+  margin-bottom: 200px;
+  border-radius: 10px;
+  -webkit-box-shadow: -18px 16px 44px -17px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -18px 16px 44px -17px rgba(0, 0, 0, 0.75);
+  box-shadow: -18px 16px 44px -17px rgba(0, 0, 0, 0.75);
+  background-color: white;
+}
+
+.label_container {
+  padding-left: 8px;
+  background-color: #ffffffa3;
+  background-color: white;
+  border-radius: 30px;
 }
 
 .topbar {
   grid-row: 1/2;
   grid-column: 1/3;
-  background-color: #f1f1f1;
+  background-color: white;
+  border-bottom: 5px solid #8e848424;
 }
+
 .content {
-  background-color: rgb(255, 240, 242);
+}
+#bookpage-save {
+  margin-left: 770px;
 }
 
 .icon {
-  margin-bottom: 30px;
+  margin-top: 10px;
+  filter: invert(40%);
+}
+.icons_for_sidebar {
+  margin-bottom: 20px;
 }
