--- a/Final/final_draftjs/src/Bookpage.css
+++ b/Final/final_draftjs/src/Bookpage.css
@@ -34,12 +34,24 @@
   grid-column: 1/3;
   background-color: white;
   border-bottom: 5px solid #8e848424;
+  display: flex;
+}
+
+#inputTitle {
+  font-size: 40px;
+  height: 80px;
+  width: 450px;
+  margin-left: 200px;
+  margin-right: 30px;
+  text-align: center;
+  outline: none;
 }
 
 .content {
+  font-size: 30px;
 }
 #bookpage-save {
-  margin-left: 770px;
+  margin-left: 70px;
 }
 
 .icon {
