--- a/Final/final_draftjs/src/Bookpage.css
+++ b/Final/final_draftjs/src/Bookpage.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Oswald");
+
 .Bookpage {
   display: grid;
   grid-template-columns: 934px auto;
   grid-template-rows: 90px 1276px;
   /*background-color: rgb(255, 252, 224);*/
-  background-color: white;
+
   background-image: url("bg.png");
   /*filter: opacity(0.4);*/
 }
@@ -45,18 +47,20 @@
   margin-right: 30px;
   text-align: center;
   outline: none;
+  font-family: "Oswald", sans-serif;
 }
 
 .content {
   font-size: 30px;
 }
 #bookpage-save {
-  margin-left: 70px;
+  margin-left: 160px;
 }
-
 .icon {
   margin-top: 10px;
-  filter: invert(40%);
+}
+.icon:not(#addpage) {
+  filter: invert(50%);
 }
 .icons_for_sidebar {
   margin-bottom: 20px;
