--- a/Midterm/midterm_styling/src/ContactList.css
+++ b/Midterm/midterm_styling/src/ContactList.css
@@ -19,7 +19,7 @@
   padding-top: 40px;
   padding-bottom: 30px;
   height: 500px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .sidebar {
   display: flex;
