--- a/Final/final_draftjs/src/Listpage.css
+++ b/Final/final_draftjs/src/Listpage.css
@@ -30,6 +30,8 @@
   grid-column: 1/3;
   grid-row: 2/3;
   margin-top: 10px;
+  text-align: center;
+  font-size: 28px;
 }
 
 .listpage:not(#month) {
